<resources>
    <string name="app_name" translatable="false">Novo Care</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="choose_lang_ar" translatable="false">أختر اللغة</string>
    <string name="choose_lang_en" translatable="false">Please select the language</string>

    <string name="date_dummy" translatable="false">15-8-2020</string>
    <string name="text_dummy" translatable="false">AMD  EQUIPPED TO WIN GAME  EQUIPPED TO WIN GAME  EQUIPPED TO WIN GAME BUNDLE</string>
    <string name="faq_dummy" translatable="false">what is  Bla bla bla??</string>

    <string name="more">More</string>
    <string name="edu_center">EduCenter</string>
    <string name="locator">Locator</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="novo_locator">Novo Locator</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_statement">Privacy statement</string>
    <string name="languages">Languages</string>
    <string name="image_description">Image Description</string>
    <string name="network_error">Network Error</string>
    <string name="contact_novo">Contact Novo Nordisk Representative</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="select_contact_way">Select the way you prefer to contact us</string>
    <string name="video_call">Video Call</string>
    <string name="chat">Chat</string>
    <string name="email">Email</string>
    <string name="start_call">Start Call</string>
    <string name="add_name">Add your name</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="fill_fields">Fill all fields</string>
    <string name="email_sent">Email sent successfully</string>
    <string name="thank_you">Thank you !</string>
    <string name="for_contacting_novo_nordisk">For contacting Novo Nordisk</string>
    <string name="dismiss">dismiss</string>
    <string name="send_email_form">Send Email</string>
    <string name="locator_header_text">Through this page you can know the nearest Novocare Center or Pharmacy that have Novonordisk Medications</string>



    <string name="room_status">status</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="codec_title">Set your preferred audio and video codec. Not all codecs are supported with Group rooms. The media server will fallback to OPUS or VP8 if a preferred codec is not supported.</string>
    <string name="pref_title_audio_codec">Audio Codec</string>
    <string name="pref_title_video_codec">Video Codec</string>
    <string name="sender_bandwidth_constraints">Set sender bandwidth constraints. Zero represents the WebRTC default value which varies by codec.</string>
    <string name="max_audio_bitrate">Max Audio Bitrate (bits per second)</string>
    <string name="max_video_bitrate">Max Video Bitrate (bits per second)</string>
    <string name="vp8_simulcast">VP8 Simulcast</string>
    <string name="audio_device">Audio Device</string>
    <string name="room_screen_select_device">Select Device</string>
</resources>